# cps-cw2

./: .gitignore  CMakeLists.txt  README.md
src/: NQueenSolver.cpp  NQueenSolver.h  nqueens.cpp  nqueens.cu
src/cuda/: nqueens.cu  nqueens.h
src/openmp/: NQueenSolver.cpp  NQueenSolver.h  main.cpp
src/serial/: nqueens.cpp  nqueens.h
